# llm-cli

./: .gitignore  CHANGELOG.md  build_test.md  main.py  manifest.in  pyproject.toml  readme.md  requirements.txt  setup.py  test_openrouter.py
src/llm_chat/: __init__.py  chat.py  cli.py  clients.py  config.py  setup.py  tools.py  utils.py
